--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-constants": "~9.3.3",
+    "expo-notifications": "~0.8.2",
+    "expo-permissions": "^11.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
